# hearlers-api

./: .gitignore  .gitmodules  Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml  start.sh
common/core/application/: base_message_handler.py  use_case.py  use_case_core_response.py
common/core/dependency/: dependency_injection.py
common/core/domain/: aggregate_root.py  value_object.py
common/core/filter/: exception_middleware.py
common/core/infrastructure/: configs.py  kafka.py  subscribe_manager.py
common/core/message/: base_message.py
common/core/message/command/: base_command.py
common/core/message/command/user/: user_command.py
common/core/message/event/: base_event.py
common/core/message/event/user/: user_event.py
common/core/message/query/: base_query.py
common/core/message/query/user/: user_query.py
common/core/presentation/: controller_response.py
common/enum/user/: age_range.py  auth_channel.py
common/filter/: exception_middleware.py
common/proto/v1/common/: error_pb2.py  error_pb2.pyi  pagination_pb2.py  pagination_pb2.pyi  sort_order_pb2.py  sort_order_pb2.pyi
docker/: Dockerfile.api_gateway  Dockerfile.service_server  docker-compose-server.yaml  docker-compose.yaml
services/api_gateway/: README.md
services/api_gateway/app/: main.py
services/api_gateway/app/presentations/rest/: controller.py
services/service_server/: alembic.ini
services/service_server/alembic/: env.py
services/service_server/app/: main.py
services/service_server/app/application/handler/: create_user_handler.py
services/service_server/app/common/filter/: exception_middleware.py
services/service_server/app/common/guard/: auth_guard.py
services/service_server/app/common/service/: jwt_service.py
services/service_server/app/common/strategy/: app_jwt_strategy.py  jwt_strategy.py
services/service_server/app/domain/: user.py
services/service_server/app/infrastructure/: db.py
services/service_server/app/infrastructure/models/: user.py  user_profile.py
services/service_server/app/user/: __init__.py
(+28 files in other folders)
